# luban

./: .gitattributes  Makefile  ReadMe.md  ReleaseNote.md
source/artinchip/aic-authorization/: CMakeLists.txt
source/artinchip/aic-authorization/authorization/: CMakeLists.txt  authorization.c  authorization.h  rsa_pad.c  rsa_pad.h
source/artinchip/aic-authorization/test/: CMakeLists.txt  test_aic_hw_authorization.c  test_aic_hw_authorization.h
source/artinchip/aic-logo/libfdt/: CMakeLists.txt  fdt.c  fdt.h  fdt_addresses.c  fdt_empty_tree.c  fdt_overlay.c  fdt_ro.c  fdt_rw.c  fdt_strerror.c  fdt_sw.c  fdt_wip.c  libfdt.h  libfdt_env.h  libfdt_internal.h
source/artinchip/aic-mpp/: CMakeLists.txt
source/artinchip/aic-mpp/base/: CMakeLists.txt
source/artinchip/aic-mpp/base/include/: mpp_list.h  mpp_log.h  mpp_mem.h
source/artinchip/aic-mpp/base/memory/: dma_allocator.c  mpp_mem.c
source/artinchip/aic-mpp/ge/: cmdq_ops.c  mpp_ge.c  normal_ops.c
source/artinchip/aic-mpp/ge/include/: ge_ops.h  ge_reg.h
source/artinchip/aic-mpp/include/: dma_allocator.h  frame_allocator.h  mpp_dec_type.h  mpp_decoder.h  mpp_encoder.h  mpp_ge.h
source/artinchip/aic-mpp/middle_media/: CMakeLists.txt
source/artinchip/aic-mpp/middle_media/audio_decoder/: CMakeLists.txt
source/artinchip/aic-mpp/middle_media/base/: CMakeLists.txt
source/artinchip/aic-mpp/middle_media/component/: CMakeLists.txt  mm_core.c
source/artinchip/aic-mpp/middle_media/mini_audio_player/: CMakeLists.txt  mini_audio_player.c  mini_audio_player.h  mini_audio_player_demo.c
source/artinchip/aic-mpp/middle_media/openmax/: CMakeLists.txt  OMX_Core.c
source/artinchip/aic-mpp/middle_media/player/: CMakeLists.txt  aic_player.c  player_demo.c
source/artinchip/aic-mpp/middle_media/recorder/: CMakeLists.txt  aic_recorder.c  muxer_demo.c  recorder_demo.c  recorder_demo.config
source/artinchip/aic-mpp/mpp_test/: CMakeLists.txt  bit_stream_parser.c  bit_stream_parser.h  ccm_gamma_test.c  four_video_dec_test.c  ge_alpha_blending.c  ge_bitblt.c  ge_bitblt_alpha.c  ge_dither.c  ge_fillrect.c  ge_format.c  ge_rotate.c  ge_scale.c  ge_scan_order.c  gz_test.c  hwjpeg_test.c  hwpng_test.c  jpeg_decode_test_1606.c  jpeg_encode_test.c  jpeg_encode_test_1606.c  mp3player.c  mpp_dec_test.c  mpp_heap_fb_test.c  mpp_video.c  mpp_video.h  mpp_video_test.c  pic2_test.c  pic_animation.c  pic_decode_ext2_test.c  pic_decode_ext_test.c  pic_error_test.c  picture_decoder_test.c  png_test.c  ve_ge_de_test.c
source/artinchip/aic-mpp/mpp_test/ge_test/: CMakeLists.txt  ge_alpha_blending.c  ge_bitblt.c  ge_bitblt_alpha.c  ge_bitblt_simple_test.c  ge_dither.c  ge_fillrect.c  ge_fillrect_simple_test.c  ge_format.c  ge_rotate.c  ge_rotate_simple_test.c  ge_scale.c  ge_scan_order.c
source/artinchip/aic-mpp/ve/: CMakeLists.txt
source/artinchip/aic-mpp/ve/common/: ve.c  (+2 more)
source/artinchip/aicp-dec/: CMakeLists.txt
source/artinchip/awtk-ui/: CMakeLists.txt  README.md
source/artinchip/awtk-ui/awtk/: .gitignore  README.md  component.json
source/artinchip/gst1-plugins-aic/: gstaicfb.c  gstaicfb.h  gstfbsink.c  gstfbsink.h  gstmppallocator.c  gstmppallocator.h  gstplugin.c  gstvedec.c  gstvedec.h  meson.build  test.c  test_gstmem.c
source/artinchip/libuserid/: CMakeLists.txt
source/artinchip/libuserid/src/: internal.h  list.h  parser.c  part.c  userid_reader.c
source/artinchip/lvgl-ui/: CMakeLists.txt  aic_ui.h  lv_conf.h  main.c
source/artinchip/lvgl-ui/aic_demo/: ui.c  ui.h
source/artinchip/lvgl-ui/base_ui/: base_ui.c  base_ui.h  cpu_mem.c  cpu_mem.h
source/artinchip/lvgl-ui/lv_drivers/: aic_dec.c  aic_dec.h  lv_drv_conf.h  lv_fbdev.c  lv_fbdev.h  lv_ge2d.c  lv_ge2d.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
source/artinchip/lvgl-ui/lvgl/: CMakeLists.txt
source/artinchip/lvgl-ui/lvgl_v8/: lv_conf.h
source/artinchip/lvgl-ui/lvgl_v9/: lv_conf.h
source/artinchip/openssl-hwengine/: CMakeLists.txt
source/artinchip/openssl-hwengine/conf/: openssl_aic.cnf
source/artinchip/openssl-hwengine/huk/: huk_engine.c  huk_engine.h  huk_protected_ciphers.c
source/artinchip/openssl-hwengine/src/: hardware_engine.c  hardware_engine.h  hash.c  rsa.c  skcipher.c
source/artinchip/p2p_auto/: CMakeLists.txt  p2p_auto.c
source/artinchip/p2p_auto/files/: p2p_supplicant.conf
source/artinchip/test-audio/: CMakeLists.txt  goertzel.c  goertzel.h  test_audio.c  test_audio_qc.c
source/artinchip/test-can/: CMakeLists.txt  test_can.c
source/artinchip/test-ce/: CMakeLists.txt  README.rst
source/artinchip/test-ce/kcapi/: app.h  digests.c  main.c  rsa.c  rsa_pad.c  rsa_pad.h  skciphers.c  util.c  util.h  util_cmd.c
source/artinchip/test-common/: CMakeLists.txt  sample_base.h
source/artinchip/test-dvp/: CMakeLists.txt  dvp_test.c  test_dvp.c
source/artinchip/test-efuse/: CMakeLists.txt  test_efuse.c
source/artinchip/test-fb/: CMakeLists.txt  fb_test.c  test_fb.c
source/artinchip/test-gpio/: CMakeLists.txt  test-gpio.c  test_gpio.c  test_gpio_output.c
source/artinchip/test-keyadc/: CMakeLists.txt  keyadc_test.c  test_keyadc.c
source/artinchip/test-libmad/: CMakeLists.txt  mp3player.c
source/artinchip/test-lvgl/: CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h  lv_fbdev.c  lv_fbdev.h  lv_ge2d.c  lv_ge2d.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h  main.c
source/artinchip/test-lvgl/aic_ui/: aic_dec.c  aic_dec.h  aic_ui.c  aic_ui.h  cpu_mem.c  cpu_mem.h
source/artinchip/test-mbox/: CMakeLists.txt  test_mbox.c
source/artinchip/test-spi/: CMakeLists.txt  spidev_fdx.c  spidev_test.c  test_spi.c
source/artinchip/test-touchscreen/: CMakeLists.txt  ts_draw.c
source/artinchip/test-tp2825/: CMakeLists.txt  test_tp2825.c
source/artinchip/test-uart/: CMakeLists.txt  test_uart.c  testuart.c
source/artinchip/wifimanager/: CMakeLists.txt
source/artinchip/wifimanager/demo/: CMakeLists.txt  main.c
source/artinchip/wifimanager/files/: wifimanager.init  wpa_supplicant.conf
source/artinchip/wifimanager/inc/: wifimanager.h
source/artinchip/wifimanager/src/: CMakeLists.txt
(+3873 files in other folders)
